CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(littleWorld)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/modules")

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLUT REQUIRED)
FIND_PACKAGE(SFML REQUIRED Graphics Window System)
FIND_PACKAGE(LUA REQUIRED)

FILE(GLOB_RECURSE source_files src/*.cpp)
ADD_EXECUTABLE(littleWorld ${source_files})

TARGET_LINK_LIBRARIES(littleWorld ${SFML_LIBRARY} ${GLUT_LIBRARY} ${OPENGL_LIBRARY} ${LUA_LIBRARY})

